--- a/pom.xml
+++ b/pom.xml
@@ -40,17 +40,25 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	<!--   Postgresql dependency		-->
+	<!--		Postgresql dependency		-->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>42.7.6</version>
 		</dependency>
-	<!--	Jpa dependency		-->
+	<!--		Jpa dependency		-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+	<!--		Lombok dependency		-->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.38</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
