--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,12 @@
 			<version>1.18.38</version>
 		</dependency>
 
-
+	<!--		Hibernate		-->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>7.0.1.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
