--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,11 @@
 			<artifactId>postgresql</artifactId>
 			<version>42.7.6</version>
 		</dependency>
-	<!--		Jpa dependency		-->
-		<dependency>
+	<!--		Jpa dependency
+ 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
+		</dependency>		-->
 	<!--		Lombok dependency		-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -58,11 +58,22 @@
 			<version>1.18.38</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+		</dependency>
+
 	<!--		Hibernate		-->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>7.0.1.Final</version>
+			<version>6.2.7.Final</version>
+		</dependency>
+		<!--	Jakarta Persistence -->
+		<dependency>
+			<groupId>jakarta.persistence</groupId>
+			<artifactId>jakarta.persistence-api</artifactId>
+			<version>3.2.0</version>
 		</dependency>
 	</dependencies>
 
