--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,7 @@
 # cfg file
-spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5433/task-manager_db
-    username: admin
-    password: pass
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
+#spring:
+#  datasource:
+#    url: jdbc:postgresql://localhost:5433/task-manager_db
+#    username: admin
+#    password: pass
+#    driver-class-name: org.postgresql.Driver
