--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,11 @@
 #    username: admin
 #    password: pass
 #    driver-class-name: org.postgresql.Driver
+
+
+spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8081/realms/task-manager
